# template-cmake

./: CMakeLists.txt  hotrl.sh  start.py  vcpkg.json
root/app/: CMakeLists.txt
root/app/src/: main.cpp
root/core/: CMakeLists.txt
root/core/include/: core.h
root/core/src/: core.cpp
root/module/: CMakeLists.txt
root/module/src/: module.cpp
